Campos codificados
Campos codificados por pais