@@ -3,6 +3,8 @@ package com.if7100.controller;
 import com.if7100.entity.Bitacora;
 import com.if7100.entity.Usuario;
 import com.if7100.entity.UsuarioPerfil;
+import com.if7100.entity.relacionesEntity.ModalidadesPaises;
+import com.if7100.entity.relacionesEntity.NivelEducativoPaises;
 import com.if7100.entity.Paises;
 import com.if7100.service.BitacoraService;
 import com.if7100.service.PaisesService;
@@ -18,8 +20,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 
-import com.if7100.entity.Hecho;
 import com.if7100.entity.NivelEducativo;
 import com.if7100.entity.Perfil;
 import com.if7100.repository.UsuarioPerfilRepository;
@@ -27,8 +29,10 @@ import com.if7100.repository.UsuarioRepository;
 import com.if7100.service.NivelEducativoService;
 import com.if7100.service.PerfilService;
 import com.if7100.service.UsuarioPerfilService;
+import com.if7100.service.relacionesService.NivelEducativoPaisesService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Controller
@@ -45,11 +49,11 @@ public class NivelEducativoController {
     private BitacoraService bitacoraService;
     private Usuario usuario;
     private Paises paises;
-
+    private NivelEducativoPaisesService nivelEducativoPaisesService;
     public NivelEducativoController(BitacoraService bitacoraService,
             NivelEducativoService nivelEducativoService, PerfilService perfilService,
             UsuarioRepository usuarioRepository, PaisesService paisesService, UsuarioPerfilService usuarioPerfilService,
-            UsuarioPerfilRepository usuarioPerfilRepository) {
+            UsuarioPerfilRepository usuarioPerfilRepository, NivelEducativoPaisesService nivelEducativoPaisesService) {
 
         super();
         this.nivelEducativoService = nivelEducativoService;
@@ -59,6 +63,7 @@ public class NivelEducativoController {
         this.paisesService = paisesService;
         this.usuarioPerfilService = usuarioPerfilService;
         this.usuarioPerfilRepository = usuarioPerfilRepository;
+        this.nivelEducativoPaisesService = nivelEducativoPaisesService;
 
     }
 
@@ -108,19 +113,31 @@ public class NivelEducativoController {
             return "redirect:/niveleducativo/1";
         }
 
-        int numeroTotalElementos = nivelEducativoService.getAllNivelEducativo().size();
+       Integer codigoPaisUsuario = this.usuario.getOrganizacion().getCodigoPais();
 
-        Pageable pageable = initPages(pg, 5, numeroTotalElementos);
+		// obtiene el id del pais del hecho segun el pais de la organizacion del usuario
+		List<NivelEducativo> nivelEducativoFiltrados = nivelEducativoService
+				.getNivelEducativoByCodigoPais(codigoPaisUsuario);
 
-        Page<NivelEducativo> nivelEducativoPage = nivelEducativoService.getAllNivelEducativoPage(pageable);
+		int numeroTotalElementos = nivelEducativoFiltrados.size();
 
-        List<Integer> nPaginas = IntStream.rangeClosed(1, nivelEducativoPage.getTotalPages())
-                .boxed()
-                .toList();
+		Pageable pageable = initPages(pg, 5, numeroTotalElementos);
+
+		int tamanoPagina = pageable.getPageSize();
+		int numeroPagina = pageable.getPageNumber();
+
+		List<NivelEducativo> nivelEducativoPaginados = nivelEducativoFiltrados.stream()
+				.skip((long) numeroPagina * tamanoPagina)
+				.limit(tamanoPagina)
+				.collect(Collectors.toList());
+
+		List<Integer> nPaginas = IntStream.rangeClosed(1, (int) Math.ceil((double) numeroTotalElementos / tamanoPagina))
+				.boxed()
+				.toList();
 
         model.addAttribute("PaginaActual", pg);
         model.addAttribute("nPaginas", nPaginas);
-        model.addAttribute("nivelesEducativos", nivelEducativoPage.getContent());
+        model.addAttribute("nivelesEducativos", nivelEducativoPaginados);
         return "nivelEducativo/nivelEducativo";
     }
 
@@ -134,7 +151,8 @@ public class NivelEducativoController {
 
                 NivelEducativo nivelEducativo = new NivelEducativo();
                 model.addAttribute("nivelEducativo", nivelEducativo);
-                model.addAttribute("paises", paisesService.getAllPaises());
+                model.addAttribute("listaPaises", paisesService.getAllPaises());
+
                 return "nivelEducativo/create_nivelEducativo";
             } else {
                 return "SinAcceso";
@@ -146,9 +164,19 @@ public class NivelEducativoController {
     }
 
     @PostMapping("/nivelEducativo")
-    public String saveNivelEducativo(@ModelAttribute NivelEducativo nivelEducativo) {
+    public String saveNivelEducativo(@ModelAttribute NivelEducativo nivelEducativo, @RequestParam List<String> paisesSeleccionados) {
         this.validarPerfil();
         nivelEducativoService.saveNivelEducativo(nivelEducativo);
+
+        for (String iso2 : paisesSeleccionados) {
+			Paises pais = paisesService.getPaisByISO2(iso2); // Obtener el país por ISO2
+			if (pais != null) {
+				NivelEducativoPaises relacion = new NivelEducativoPaises();
+				relacion.setNivelEducativo(nivelEducativo);
+				relacion.setPais(pais); 
+				nivelEducativoPaisesService.saveNivelEducativoPaises(relacion);
+			}
+		}
 
         bitacoraService.saveBitacora(new Bitacora(this.usuario.getCVCedula(),
                 this.usuario.getCVNombre(), this.perfil.getCVRol(), "Crea en nivel educativo", this.usuario.getOrganizacion().getCodigoPais()));
@@ -188,7 +216,6 @@ public class NivelEducativoController {
             || usuarioPerfilService.usuarioTieneRol(this.usuario.getCVCedula(), 2)) {
 
                 model.addAttribute("nivelEducativo", nivelEducativoService.getNivelEducativoById(id));
-                model.addAttribute("paises", paisesService.getAllPaises());
                 return "nivelEducativo/edit_nivelEduactivo";
             } else {
                 return "SinAcceso";
@@ -208,7 +235,6 @@ public class NivelEducativoController {
         existingNivelEducativo.setCI_Id(id);
         existingNivelEducativo.setCVTitulo(nivelEducativo.getCVTitulo());
         existingNivelEducativo.setCVDescripcion(nivelEducativo.getCVDescripcion());
-        existingNivelEducativo.setCVPais(nivelEducativo.getCVPais());
         bitacoraService.saveBitacora(new Bitacora(this.usuario.getCVCedula(),
                 this.usuario.getCVNombre(), this.perfil.getCVRol(), "Actualiza en nivel educativo", this.usuario.getOrganizacion().getCodigoPais()));
 
